[package]
name = "rdma-fuse"
version = "0.1.0"
authors = ["Ian Wahbe <ian@wahbe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = { version = "0.7", git = "https://github.com/iwahbe/fuser.git", branch = "from-metadata-for-fileattr" }
libc = "0.2"
nix = "0.20"
clap = "2.33"
log = "0.4"
env_logger = "0.8"
memmap2 = "0.2"
ibverbs = "0.4"
